# app/swagger/swagger.yaml
@@ -286,7 +286,10 @@ paths:
       tags: [list_playlists]
       operationId: app.list_playlists
       summary: list playlists owned by user
-
+      parameters:
+        - name: order
+          in: query
+          type: string
       responses:
         200:
           description: Listed playlists
@@ -302,10 +305,7 @@ paths:
         - name: playlist_id
           in: query
           type: integer
-        - name: user_token
-          in: body
-          schema:
-            $ref: '#/definitions/User_token'
+
       responses:
         200:
           description: Listed songs
